Adição de efeito visual na mudança de abas

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li class="selected"><a href="#">Blog</a></li>
-                <li><a href="#">Bookmarks</a></li>
-                <li><a href="#">Elements</a></li>
-                <li><a href="#">Playlists</a></li>
-                <li><a href="#">Books</a></li>
+                <li><a href="#" onclick="route()">Home</a></li>
+                <li><a href="#" onclick="route()" class="selected">Blog</a></li>
+                <li><a href="#" onclick="route()">Bookmarks</a></li>
+                <li><a href="#" onclick="route()">Elements</a></li>
+                <li><a href="#" onclick="route()">Playlists</a></li>
+                <li><a href="#" onclick="route()">Books</a></li>
             </ul>
         </nav>
     </header>
@@ -84,6 +84,7 @@
             by Dwinawan on <a href="https://dribbble.com/shots/15238065-Blog-Personal-Website/attachments/6986428?mode=media">dribbble</a> ® All rights reserved.
         </p>
     </footer>
+    <script src="./main.js"></script>
 </body>
 
 </html>
